--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 appnope==0.1.0
 backcall==0.1.0
 bleach==2.1.3
+cachetools==2.1.0
+certifi==2018.8.24
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.0
 entrypoints==0.2.3
 future==0.16.0
+google-api-core==1.3.0
+google-auth==1.5.1
+google-auth-oauthlib==0.2.0
+google-cloud-bigquery==1.5.0
+google-cloud-core==0.28.1
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
 html5lib==1.0.1
+idna==2.7
 ipykernel==4.8.2
 ipython==6.3.1
 ipython-genutils==0.2.0
@@ -34,7 +45,9 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.4.1
 numpy==1.14.2
+oauthlib==2.1.0
 pandas==0.22.0
+pandas-gbq==0.6.0
 pandocfilters==1.4.2
 parso==0.2.0
 patsy==0.5.0
@@ -43,7 +56,10 @@ pickleshare==0.7.4
 ply==3.11
 progressbar2==3.37.1
 prompt-toolkit==1.0.15
+protobuf==3.6.1
 ptyprocess==0.5.2
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pygam==0.5.1
 Pygments==2.2.0
 pyparsing==2.2.0
@@ -53,6 +69,9 @@ pytz==2018.4
 PyYAML==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
+requests==2.19.1
+requests-oauthlib==1.0.0
+rsa==3.4.2
 scikit-learn==0.19.1
 scipy==1.0.1
 seaborn==0.8.1
@@ -65,6 +84,7 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
 traitlets==4.3.2
+urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.2.1
