--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ google-resumable-media==0.3.1
 googleapis-common-protos==1.5.3
 html5lib==1.0.1
 idna==2.7
+imbalanced-learn==0.4.3
 ipykernel==4.8.2
 ipython==6.3.1
 ipython-genutils==0.2.0
@@ -72,9 +73,9 @@ qtconsole==4.3.1
 requests==2.20.1
 requests-oauthlib==1.0.0
 rsa==3.4.2
-scikit-learn==0.19.1
+scikit-learn==0.20.0
 scipy==1.0.1
-seaborn==0.8.1
+seaborn==0.9.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
